@@ -12,6 +12,7 @@
 * Improved cookie persistence to allow multiple persisted trees per page via cookieId option
 * Improved location persistence by making it case-insensitive
 * Improved swapClass and replaceClass plugin implementations
+* Added folder-closed.gif to filetree example
 
 1.3
 ---
